==> QuantumLeaps/qpcpp/examples/esp-idf/dpp_bsp-arduino/bsp.cpp <==
#include "qpcpp.hpp"   // QP-C++ framework
#include "dpp.hpp"     // DPP application
#include "bsp.hpp"     // Board Support Package
#include <Arduino.h>
#include "esp_freertos_hooks.h"

void BSP::init(void) {
    // initialize the hardware used in this sketch...
    // NOTE: interrupts are configured and started later in QF::onStartup()
    pinMode(LED_BUILTIN, OUTPUT);

    randomSeed(1234); // seed the Random Number Generator

#ifdef QS_ON
    QS_INIT(0);

    // output QS dictionaries
    QS_OBJ_DICTIONARY(&l_TIMER_ID);
    QS_USR_DICTIONARY(PHILO_STAT);

    // setup the QS filters...
    QS_GLB_FILTER(QP::QS_SM_RECORDS); // state machine records
    QS_GLB_FILTER(QP::QS_AO_RECORDS); // active object records
    QS_GLB_FILTER(QP::QS_UA_RECORDS); // all user records

#else

    Serial.begin(115200); // set the highest stanard baud rate of 115200 bps
    Serial.print("QP-C++: ");
    Serial.print(QP_VERSION_STR);
    Serial.println("");

#endif
}

void BSP::displayPhilStat(uint8_t n, char_t const *stat) {
    digitalWrite(LED_BUILTIN, (stat[0] == 'e') ? HIGH : LOW);

#ifdef QS_ON
    QS_BEGIN_ID(PHILO_STAT, AO_Philo[n]->m_prio) // app-specific record begin
        QS_U8(1, n);  // Philo number
        QS_STR(stat); // Philo status
    QS_END()
#else
    Serial.print("Philosopher ");
    Serial.print(n, DEC);
    Serial.print(" ");
    Serial.println(stat);
#endif
}

void BSP::displayPaused(uint8_t paused) {
    char const *msg = paused ? "Paused ON" : "Paused OFF";
#ifndef QS_ON
    Serial.println(msg);
#endif
}

void BSP::ledOff(void) {
    digitalWrite(LED_BUILTIN, LOW);
}

void BSP::ledOn(void) {
    digitalWrite(LED_BUILTIN, HIGH);
}

void QF::onStartup(void) {
    esp_register_freertos_idle_hook(IdleHook);
    esp_register_freertos_tick_hook_for_cpu(tickHook_ESP32, QP_CPU_NUM);
}
